# our-web3-application

./: .cpanel.yml  LICENSE  README.md
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/server/src/: main.rs  templates.rs
crates/server/templates/: exchange-rate.html  user-assets.html
